--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -5,6 +5,10 @@
     name="logoHouse.ico"
     content="width=device-width, initial-scale=1.0"
   >
+  <link 
+      rel="stylesheet" 
+      th:href="@{/styles/perfil.css}"
+  >
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
