Vista crearAdmin con controlador admin/registro y editar perfil profesional

--- a/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
@@ -239,7 +239,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                                <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
+                                <button type="submit" class="btn btn-primary">Subir</button>
                             </div>
                         </div>
                     </div>
