--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -77,6 +77,11 @@
                                             class="dropdown-item"
                                             href="/profesional/registro"
                                     >Registrar Profesional</a></li>
+                                    <li>
+                                        <a
+                                            class="dropdown-item"
+                                            href="/admin/registro"
+                                    >Crear administrador</a></li>
                                     <li><a
                                             class="dropdown-item"
                                             href="/paciente/todos"
