--- a/AppServSalud/src/main/resources/templates/dashboardProfesional.html
+++ b/AppServSalud/src/main/resources/templates/dashboardProfesional.html
@@ -1,37 +1,122 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaft.org">
-
-    <head th:replace="/fragments/head :: head"></head>
+<html
+    lang="es"
+    xmlns:th="http://www.thymeleaft.org"
+>
     <head>
-        <link
-                rel="stylesheet"
-                th:href="@{/styles/dashProf.css}"
+        <meta charset="UTF-8">
+        <title>Clinica House</title>
+        <meta
+            name="logoHouse.ico"
+            content="width=device-width, initial-scale=1.0"
         >
-    </head>
-    
-    <body>
-        <header th:replace="/fragments/header :: header"></header>
-        <i><h1>Bienvenido</h1></i>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        >
 
-        <div class="containes-fluid">
-            <div class="row">
-                <div class="col-4 barraLateral col-12 col-sm-auto">
-                    <nav class="menu">
-                        <a href="#"><i class="fas fa-home"></i><span>Perfil</span></a>
-                        <a href="#"><i class="fas fa-home"></i><span>Calendario</span></a>
-                        <a href="#"><i class="fas fa-home"></i><span>Turnos</span></a>
-                    </nav>
-                </div>
-                <main class="columna principal">
-                    <div class="row justify-content-center align-content-center text-center">
-                        <div class="columna col-lg-6">
-                            <h4>Acá va el formulario </h4>
+    </head>
+    <body style="background-color: rgba(138, 186, 138, 0.75);">
+        <header th:replace="/fragments/header :: header"></header>
+        <main>
+            <div class="container d-flex mt-3">
+                <section
+                    class="col-10 d-flex justify-content-evenly"
+                    id="tablero"
+                    style="height: 600px;"
+                >
+                    <div class="card justify-content-evenly">
+                        <button
+                            onclick="showFragment('principal')"
+                            title="Dashboard"
+                            class="btn"
+                        >Home</button>
+                        <button
+                            onclick="showFragment('pacientes')"
+                            title="Mis Pacientes"
+                            class="btn"
+                        >Mis Pacientes</button>
+                        <button
+                            onclick="showFragment('turnos')"
+                            title="Mis Turnos"
+                            class="btn"
+                        >Mis Turnos</button>
+                        <button
+                            onclick="showFragment('misDatos')"
+                            title="Mis Datos"
+                            class="btn"
+                        >Mis Datos</button>
+                    </div>
+                    <div
+                        id="principalFragment"
+                        class="col-sm-8 fragment"
+                    >
+                        <div th:replace="/fragments/dashProfesionalPrincipal :: principal"></div>
+                    </div>
+                    <div
+                        id="pacientesFragment"
+                        class="col-sm-8 fragment d-none"
+                    >
+                        <div th:replace="/fragments/dashProfesionalListaPacientes :: pacientes"></div>
+                    </div>
+
+                    <div
+                        id="turnosFragment"
+                        class="col-sm-8 fragment d-none"
+                    >
+                        <div th:replace="/fragments/dashProfesionalTurnos :: turnos"></div>
+                    </div>
+                    <div
+                        id="misDatosFragment"
+                        class="col-sm-8 fragment d-none"
+                    >
+                        <div th:replace="/fragments/dashProfesionalMisDatos :: misDatos"></div>
+                    </div>
+                    <div
+                        id="detallePacienteFragment"
+                        class="col-sm-8 fragment d-none modal fade"
+                    >
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div th:replace="/fragments/dashProfesionalDetallePaciente :: detallePaciente"></div>
+                            </div>
                         </div>
                     </div>
-                </main>
+                </section>
+                <!-- TODO: mostrar el perfil del profesional logueado. -->
+                <aside
+                    id="perfil"
+                    style="border: 1px solid red;"
+                >
+                    <div class="d-flex flex-column text-center">
+                        <div class="d-flex justify-content-center">
+                            <img
+                                th:src="${profesional.imagen}__}"
+                                alt="Avatar"
+                                class="rounded-circle col-sm-6"
+                                th:if="${profesional.imagen != null}"
+                            >
+                            <img
+                                th:src="@{/assets/avatar.png}"
+                                alt="Avatar"
+                                class="rounded-circle col-sm-6"
+                                th:if="${profesional.imagen == null}"
+                            >
+                        </div>
+                        <div>
+                            <span th:text="${profesional.nombre}"></span>
+                            <span th:text="${profesional.apellido}"></span>
+                        </div>
+                        <div>
+                            <span>--En construcción--</span>
+                            <p>Ultimos Pacientes</p>
+                        </div>
+                    </div>
+                </aside>
             </div>
-        </div>
-
+        </main>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -42,6 +127,6 @@
             integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
             crossorigin="anonymous"
         ></script>
-
+        <script th:src="@{/js/dashProfesional.js}"></script>
     </body>
 </html>
